--- a/HW4.tex
+++ b/HW4.tex
@@ -167,7 +167,7 @@ a_{1 2} \\
 a_{1 3} \\
 a_{2 1} \\
 a_{2 2 }  \\
-a_{2 3 }  \\
+1a_{2 3 }  \\
 a_{3 1 }  \\
 a_{3 2 }  \\
 a_{3 3 }  \\
@@ -176,7 +176,7 @@ a_{3 3 }  \\
 \begin{pmatrix}
 0\\
 0\\
-0\\
+\0\\
 0\\
 0
 \end{pmatrix} .
@@ -198,9 +198,9 @@ $$BK = \begin {pmatrix} 1 & 1 & -1 & 0 & 0\\ -1 & 0 & 1 & 0 & 1\\ 0 & -1 & 1 & 1
 We arrive at 5 matrices that form the basis which are:
 $$M_1 = \begin{pmatrix} 1 & -1 & 0 \\ -1 & 1 & 0\\ 0 & 0 & 0 \end{pmatrix} \\
 M_2 = \begin{pmatrix} 1 & 0 & -1 \\ -1 & 0 & 1\\ 0 & 0 & 0 \end{pmatrix} \\
-M_3 = \begin{pmatrix} -1 & 1 & 1 \\ 1 & 0 & 0\\ 0 & 0 & 0 \end{pmatrix}\\
-M_4 = \begin{pmatrix} 0 & 0 & 1 \\ 1 & 0 & 0\\ 0 & 0 & 0 \end{pmatrix}\\
-M_5 = \begin{pmatrix} 0 & 1 & 0 \\ 1 & 0 & 0\\ 0 & 0 & 0 \end{pmatrix}\\
+M_3 = \begin{pmatrix} -1 & 1 & 1 \\ 1 & 0 & 0\\ 1 & 0 & 0 \end{pmatrix}\\
+M_4 = \begin{pmatrix} 0 & 0 & 1 \\ 1 & 0 & 0\\ 0 & 1 & 0 \end{pmatrix}\\
+M_5 = \begin{pmatrix} 0 & 1 & 0 \\ 1 & 0 & 0\\ 0 & 0 & 1 \end{pmatrix}\\
 $$
 
 
@@ -208,8 +208,16 @@ $$
 {\bf Problem B2 (10 pts).}
 If $A$ is an $n\times n$ symmetric matrix and $B$ is any 
 $n\times n$ invertible matrix, prove that $A$ is positive definite
-iff $\transpos{B} A B$ is positive definite.
-
+iff $\transpos{B} A B$ is positive definite.\\
+Assume $\transpos{B} A B$ is positive definite which means that: $\transpos{x}\transpos{B}AB>0$.
+\begin{equation*}
+(\transpos{x}\transpos{B})ABx>0
+\end{equation*}
+\begin{equation*}
+(Bx)^TA(Bx)>0
+\end{equation*}
+Then it is clear that $\transpos{x}Ax >0$ so  
+$A$ is positive definite.
 
 
 \vspace {0.25cm}\noindent
