--- a/HW4.tex
+++ b/HW4.tex
@@ -50,18 +50,6 @@ From part d of the duality theorem (3.14), we know that $$dim(U) + dim(U^0) = di
 $dim(E)$ is $n^2$ or 4 and $dim(U)$ is $2(n-1)$ or 2 since there are two linearly indepedent equations. Then, $dim(U^0)$ is $4 - 2 = 2$.  \\
 \medskip
 (2)
-Prove that the dimension of the subspace of $2\times 2$ matrices
-$A$, such that the sum of the entries of every row is the same (say $c_1$),
-the sum of entries of every column is the same (say $c_2$), and $c_1 =
-c_2$, is also  $2$.
-Prove that every such matrix is of the form
-\[
-\begin{pmatrix}
-a & b  \\
-b & a 
-\end{pmatrix},
-\]
-and give a basis for this subspace.\\
 The equations corresponding to the three conditions listed (sum of entries in each row are the same, sum of entries in each column are the same, $c_1 = c_2$) are the following:
 \begin{equation}
 a_{11} + a_{12} - a_{21} - a_{22} = 0
@@ -102,51 +90,6 @@ $\begin{pmatrix}
 
 \medskip
 (3)
-Prove that the dimension of the subspace of $3\times 3$ matrices
-$A$, such that the sum of the entries of every row is the same (say $c_1$),
-the sum of entries of every column is the same (say $c_2$), and $c_1 =
-c_2$, is  $5$. Begin by showing that the above constraints are given by
-the set of equations
-\[
-\begin{pmatrix}
-1 & 1 &  1 &  -1 & -1  & -1 & 0 & 0 & 0\\
-0  &  0  &  0 & 1 & 1 &  1 &  -1 & -1  & -1  \\
-1  &  -1  &  0 & 1 & -1  &  0 &  1 &  -1  &  0 \\
-0  &  1  &  -1 & 0 &  1  &  -1 &  0 &  1  &  -1 \\
-0  &  1  &  1 & -1 &  0  &  0 &  -1 &  0  &  0 \\
-\end{pmatrix}
-\begin{pmatrix}
-a_{1 1} \\
-a_{1 2} \\
-a_{1 3} \\
-a_{2 1} \\
-a_{2 2 }  \\
-a_{2 3 }  \\
-a_{3 1 }  \\
-a_{3 2 }  \\
-a_{3 3 }  \\
-\end{pmatrix}
-=
-\begin{pmatrix}
-0\\
-0\\
-0\\
-0\\
-0
-\end{pmatrix} .
-\]
-Prove that every  matrix satisfying the above constraints is of the form
-\[
-\begin{pmatrix}
-a + b - c   & -a + c + e & -b + c + d  \\
--a -b + c + d + e & a    & b  \\
-c  & d  & e 
-\end{pmatrix},
-\]
-with $a, b, c, d, e\in \reals$.
-Find a basis for this subspace. (Use the method to find a basis for the
-kernel of a matrix).\\
-
 Using the duality theorem again, we get: $n^2 - 2(n -1) = 9 - 2(3 -1) = 5$ as the dimension of the subspace of the matrices A. The set of equations are given as 
 
 \[
@@ -207,33 +150,7 @@ Conversely, when $B^\top A B$ is positive definite, then it can be written as $B
 
 \vspace {0.25cm}\noindent
 {\bf Problem B3 (100 pts).}\\
-(1)
-Let $A$ be any invertible $2\times 2$ matrix
-\[
-A = 
-\begin{pmatrix}
-a & b \\
-c & d
-\end{pmatrix}.
-\]
-Prove that there is an invertible matrix $S$ such that
-\[
-SA = 
-\begin{pmatrix}
-1 & 0 \\
-0 & ad - bc
-\end{pmatrix},
-\]
-where $S$ is the product of at most four elementary matrices
-of the form $E_{i, j; \beta}$.
-
-\medskip
-Conclude that every matrix $A$ in $\mathbf{SL}(2)$ 
-(the group of invertible $2\times 2$ matrices $A$ with
-$\det(A) = +1$)  is the product of
-at most four elementary matrices
-of the form $E_{i, j; \beta}$.
-
+(1) 
 $$ S A A^{-1} = \begin{pmatrix}
 1 & 0 \\ 0 & ad - bc
 \end{pmatrix}A^{-1}$$
@@ -276,41 +193,6 @@ $$\begin{pmatrix}
 
 \medskip
 (2)
-Recall that a rotation matrix $R$ (a member of the group
-$\mathbf{SO}(2)$)  is a matrix of the form
-\[
-R = 
-\begin{pmatrix}
-\cos\theta & -\sin\theta \\
-\sin\theta & \cos\theta
-\end{pmatrix}.
-\]
-Prove that if $\theta \not= k \pi$ (with $k \in \integs$), 
-any rotation matrix can be written as a product 
-\[
-R = U L U,
-\] 
-where $U$ is upper triangular and $L$ is lower triangular 
-of the form
-\[
-U = 
-\begin{pmatrix}
-1 & u \\
-0 & 1
-\end{pmatrix},
-\quad
-L = 
-\begin{pmatrix}
-1 & 0 \\
-v & 1
-\end{pmatrix}.
-\]
-
-\medskip
-Therefore, every plane rotation (except a flip about the origin when 
-$\theta = \pi$) can be written as the composition of three
-shear transformations!
-
 $$R = \begin{pmatrix}
 1 & u \\ 0 & 1
 \end{pmatrix} \begin{pmatrix}
@@ -575,48 +457,45 @@ Because $|a_{jj}| > \sum_{i = 1,\, i\not= j}^{n} |a_{i\, j}^{(1)}| \geq 0 \Right
 
 
 \vspace {0.25cm}\noindent
-{\bf Problem B5 (40 pts).}
-Let $(\alpha_1, \ldots, \alpha_{m + 1})$ be a sequence of pairwise distinct
-scalars in $\reals$ and let $(\beta_1, \ldots, \beta_{m + 1})$ be any 
-sequence of scalars in $\reals$, not necessarily distinct.
-
+{\bf Problem B5 (40 pts).} \\
 \medskip
 (1)
-Prove that there is a unique polynomial $P$ of degree at most $m$
-such that
-\[
-P(\alpha_i) = \beta_i, \quad 1\leq i \leq m + 1. 
-\]
+Write the polynomial as $P(X) = a_0 + a_1 X + a_2 X^2 + \cdots a_m X^m$. Then from equations$P(\alpha_i) = \beta_i, \quad 1\leq i \leq m + 1. $, we can get the matrix form such that 
+\begin{align*}
+& A = 
+\begin{pmatrix}
+1 & \alpha_1^1 & \alpha_1^2 & \cdots & \alpha_m^m \\
+1 & \alpha_2^1 & \alpha_2^2 & \cdots & \alpha_2^m \\
+\vdots & \cdots & \cdots & \cdots & \vdots \\
+1 & \alpha_{m+1}^1 & \alpha_{m+1}^2 & \cdots & \alpha_{m+1}^m \\
+\end{pmatrix} \\
+& X = 
+\begin{pmatrix}
+a_0 \\
+a_1 \\
+\vdots \\
+a_m
+\end{pmatrix} \\
+& b = 
+\begin{pmatrix}
+\beta_1 \\
+\beta_2  \\
+\vdots \\
+\beta_{m+1}
+\end{pmatrix} \\
+& AX = b
+\end{align*}
+Where we change $(a_i) \; 0 \leq i \leq m$ as our variables. Then consider $\det(A)$, think about the Vandermonde Matrix, we can easily get $\det(A) = \prod_{1 \leq i < j \leq m} (a_j - a_i)$. And since $(\alpha_1, \ldots, \alpha_{m + 1})$ is a sequence of pairwise distinct scalars, there comes $\det(A) \neq 0$, then we can get the unique solution of $X = A^{-1}b$, which means the coefficients of polynomial are unique, so $P$ is unique.
 
 \medskip
-\hint
-Remember Vandermonde!
-
-\medskip
-(2)
-Let $L_i(X)$ be the polynomial of degree $m$ given by
-\[
-L_i(X) = \frac{(X - \alpha_1)\cdots (X - \alpha_{i - 1}) (X - \alpha_{i + 1})
-\cdots (X - \alpha_{m + 1})}
-  {(\alpha_i - \alpha_1)\cdots (\alpha_i - \alpha_{i - 1}) 
-(\alpha_i - \alpha_{i + 1}) \cdots (\alpha_i - \alpha_{m + 1})},
-\quad 1 \leq i \leq m + 1.
-\]
-
-The polynomials $L_i(X)$ are known as 
-{\it Lagrange polynomial interpolants\/}.
-Prove that
-\[
-L_i(\alpha_j) = \delta_{i\, j} \quad 1\leq i, j \leq m + 1.
-\]
-Prove that
-\[
-P(X) = \beta_1L_1(X) + \cdots + \beta_{m + 1} L_{m + 1}(X)
-\]
-is the unique polynomial of degree at most $m$ such that
-\[
-P(\alpha_i) = \beta_i, \quad 1\leq i \leq m + 1. 
-\]
+(2) \\
+(a) \\
+If $i \neq j$, then $\prod_{k \neq i}(X - \alpha_k) = \prod_{k \neq i}(\alpha_j - \alpha_k) = 0 \Rightarrow L_i(\alpha_j) = 0$. \\
+If $i = j$, then $\frac{\prod_{k \neq i}(X - \alpha_k)}{\prod_{k \neq i}(\alpha_i - \alpha_k)} = \frac{\prod_{k \neq i}(\alpha_i - \alpha_k)}{\prod_{k \neq i}(\alpha_i - \alpha_k)} = 1 \Rightarrow L_i(\alpha_j) = 1$.\\
+Thus $L_i(\alpha_j) = \delta_{i\, j} \quad 1\leq i, j \leq m + 1$. \\
+(b) \\
+The degree of $L_i(X)$ is $m$ and $P(\alpha_i) = \sum_j \beta_j L_j(\alpha_i) = \sum_j \beta_j \delta_{i \, j} = \beta_i$. So the only thing we need to do is to prove the uniqueness of $P(X)$. \\
+Suppose there is another polynomial $Q(X)$ satisfying our equations $P(\alpha_i) = \beta_i, \quad 1\leq i \leq m + 1$, then it must lead to the conclusion that $H(X) = Q(X) - P(X)$ is zero at $\alpha_i, \, 1 \leq i \leq m+1$. However, according to Fundamental Theorem of Algebra, $H(X)$ is at most $m$ degree and can has at most $m$ zero points unless it is identically zero polynomial. Therefore, $H(X)$ is the identically zero polynomial and $P(X) \equiv Q(X)$, which means that $P(X)$ is unique.
 
 \medskip
 (3)
